--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,9 @@
-username = "Angles"\npassword = "json"
+# Usuario 1
+[[users]]
+username = "MAJ"
+password = "maj"
+   
+# Usuario 2
+[[users]]
+username = "usu"
+password = "usu"
