--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,9 +1,7 @@
-# Usuario 1
 [[users]]
 username = "MAJ"
-password = "maj"
+password = "jcvt"
    
-# Usuario 2
 [[users]]
 username = "usu"
 password = "usu"
