--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,7 +1,12 @@
-[[users]]
-username = "MAJ"
-password = "jcvt"
-   
-[[users]]
-username = "usu"
-password = "usu"
+all_users = """
+[
+  {
+    "username": "MAJ",
+    "password": "maj"
+  },
+  {
+    "username": "usu",
+    "password": "usu"
+  }
+]
+"""
